syntax="proto3";

option java_package = "com.dawson.grpc";

message ReqInfo{
  string msg=1;
}

message ResInfo{
  string msg=1;
}

service UserService{
  rpc request(ReqInfo) returns(ResInfo){}
  rpc requestServerStream(ReqInfo) returns(stream ResInfo){}
  rpc requestClientStream(stream ReqInfo) returns(ResInfo){}
  rpc requestBothStream(stream ReqInfo) returns(stream ResInfo){}
}